# MNIST-Art

./: .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml  railway.json  requirements.txt
backend/app/: main.py  mosaic.py
frontend/: README.md  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: app-toaster.js  generate-mosaic-button.js  glass-slider.js  inspectable-image.js  liquid-glass-panel.js  mnist-digit-grid-background.js
